--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "next": "^9.0.3",
     "react": "^16.8.6",
+    "react-context-menu": "^3.0.1",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
