--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.137",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.7.1",
     "@types/react": "^16.8.25",
