--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.0.0",
+    "marked": "^0.7.0",
+    "mermaid": "^8.2.4",
     "moment": "^2.24.0",
     "next": "^9.0.3",
     "react": "^16.8.6",
