--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.0.0",
+    "drag-drop": "^5.0.1",
     "marked": "^0.7.0",
     "mermaid": "^8.2.4",
     "moment": "^2.24.0",
@@ -20,6 +21,7 @@
     "react": "^16.8.6",
     "react-d3-cloud": "^0.7.0",
     "react-dom": "^16.8.6",
+    "react-linkify": "^1.0.0-alpha",
     "react-wordcloud": "^1.0.8",
     "stopword": "^0.3.3"
   },
